test/files/neg/macro-noexpand.check
Macros_Test_2.scala:8: error: not found: value x
  foo(x)
      ^
one error found
